--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@ body {
 	background: var(--background);
 	color: var(--foreground);
 	font: 16px 'Neue Machina';
-	line-height: 2em;
+	line-height: 1.4;
 	margin: 0;
 	padding: 0;
 }
